--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 310,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 309,
    "metadata": {
     "collapsed": false
    },
@@ -496,7 +496,9 @@
     "\n",
     "    i = 0\n",
     "    for word in paragraph:\n",
-    "        synsets_sentence.append(simplified_lesk_for_paragraphs_word(word, set([tupla[0] for tupla in synsets_context]), nasari_vectors))\n",
+    "        best_sense = simplified_lesk_for_paragraphs_word(word, set([tupla[0] for tupla in synsets_context]), nasari_vectors)\n",
+    "        if best_sense is not None:\n",
+    "            synsets_sentence.append(best_sense)\n",
     "        print(f'[{i}/{len(paragraph)}] {word} -> {synsets_sentence[i]}')\n",
     "        i += 1\n",
     "\n",
@@ -708,29 +710,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0/27] anticipated -> None\n",
+      "[1/27] celebrity -> None\n",
+      "[2/27] culture -> bn:00211860n\n",
+      "[3/27] social -> bn:01316426n\n",
+      "[4/27] medium -> None\n",
+      "[5/27] thought -> bn:00077029n\n",
+      "[6/27] artist -> bn:01017615n\n",
+      "[7/27] more than -> None\n",
+      "[8/27] hold -> bn:00738264n\n",
+      "[9/27] paintbrush -> None\n",
+      "[10/27] wound up -> None\n",
+      "[11/27] john lennon -> None\n",
+      "[12/27] new -> bn:00775066n\n",
+      "[13/27] tate -> bn:00691280n\n",
+      "[14/27] exhibition -> bn:00005938n\n",
+      "[15/27] open -> bn:02590911n\n",
+      "[16/27] alastair -> None\n",
+      "[17/27] smart -> None\n",
+      "[18/27] show -> bn:00903557n\n",
+      "[19/27] far -> bn:02004026n\n",
+      "[20/27] important -> None\n",
+      "[21/27] artist -> bn:01017615n\n",
+      "[22/27] modern -> bn:00412461n\n",
+      "[23/27] age -> bn:00020593n\n",
+      "[24/27] wa -> bn:01938240n\n",
+      "[25/27] ahead -> None\n",
+      "[26/27] time -> bn:00506951n\n",
+      "[27/27] None\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[306], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m summary \u001b[39m=\u001b[39m make_summarization(text, text_preprocessed, weighted_topic_vectors, total_weight, nasari_vectors)\n",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[311], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m summary \u001b[39m=\u001b[39m make_summarization(text, text_preprocessed, weighted_topic_vectors, total_weight, nasari_vectors)\n",
       "Cell \u001b[1;32mIn[305], line 12\u001b[0m, in \u001b[0;36mmake_summarization\u001b[1;34m(text, text_preprocessed, synsets_context, total_weight, nasari_vectors, perc)\u001b[0m\n\u001b[0;32m      8\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m paragraph \u001b[39min\u001b[39;00m text_preprocessed:\n\u001b[0;32m     11\u001b[0m     \u001b[39m# attribuisce un peso ad ogni frase\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m     weight_sentences\u001b[39m.\u001b[39mappend((i, text[i], compute_score_paragraph(paragraph, synsets_context, total_weight, nasari_vectors)))\n\u001b[0;32m     13\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mpeso frase \u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mweight_sentences[i][\u001b[39m2\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     14\u001b[0m     i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "Cell \u001b[1;32mIn[303], line 5\u001b[0m, in \u001b[0;36mcompute_score_paragraph\u001b[1;34m(paragraph, synsets_context, total_weight, nasari_vectors)\u001b[0m\n\u001b[0;32m      3\u001b[0m score_sentence \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m word \u001b[39min\u001b[39;00m paragraph:\n\u001b[1;32m----> 5\u001b[0m     synsets_sentence\u001b[39m.\u001b[39mappend(simplified_lesk_for_paragraphs_word(word, \u001b[39mset\u001b[39;49m([tupla[\u001b[39m0\u001b[39;49m] \u001b[39mfor\u001b[39;49;00m tupla \u001b[39min\u001b[39;49;00m synsets_context]), nasari_vectors))\n\u001b[0;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m syn_word \u001b[39min\u001b[39;00m synsets_sentence:\n\u001b[0;32m      8\u001b[0m     score_word \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
-      "Cell \u001b[1;32mIn[275], line 12\u001b[0m, in \u001b[0;36msimplified_lesk_for_paragraphs_word\u001b[1;34m(word, context, nasari_vectors)\u001b[0m\n\u001b[0;32m      9\u001b[0m best_sense \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     10\u001b[0m max_overlap \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m---> 12\u001b[0m word_signature \u001b[39m=\u001b[39m get_contexts_of_sentence_word_from_nasari(word, nasari_vectors)\n\u001b[0;32m     13\u001b[0m \u001b[39mif\u001b[39;00m word_signature \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mlen\u001b[39m(word_signature) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     14\u001b[0m     \u001b[39mfor\u001b[39;00m bn_syn \u001b[39min\u001b[39;00m word_signature\u001b[39m.\u001b[39mkeys():\n",
-      "Cell \u001b[1;32mIn[275], line 2\u001b[0m, in \u001b[0;36mget_contexts_of_sentence_word_from_nasari\u001b[1;34m(word, nasari_vectors)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_contexts_of_sentence_word_from_nasari\u001b[39m(word, nasari_vectors):\n\u001b[1;32m----> 2\u001b[0m     nasari_vectors_by_token \u001b[39m=\u001b[39m get_nasari_vectors_by_token(word, nasari_vectors)\n\u001b[0;32m      3\u001b[0m     \u001b[39mif\u001b[39;00m nasari_vectors_by_token\u001b[39m.\u001b[39mempty:\n\u001b[0;32m      4\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[273], line 5\u001b[0m, in \u001b[0;36mget_nasari_vectors_by_token\u001b[1;34m(token, nasari_vectors)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_nasari_vectors_by_token\u001b[39m(token, nasari_vectors):\n\u001b[1;32m----> 5\u001b[0m     \u001b[39mreturn\u001b[39;00m nasari_vectors[nasari_vectors[\u001b[39m1\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39;49mcontains(token)]\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\core\\strings\\accessor.py:129\u001b[0m, in \u001b[0;36mforbid_nonstring_types.<locals>._forbid_nonstring_types.<locals>.wrapper\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    124\u001b[0m     msg \u001b[39m=\u001b[39m (\n\u001b[0;32m    125\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCannot use .str.\u001b[39m\u001b[39m{\u001b[39;00mfunc_name\u001b[39m}\u001b[39;00m\u001b[39m with values of \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    126\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39minferred dtype \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_inferred_dtype\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    127\u001b[0m     )\n\u001b[0;32m    128\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(msg)\n\u001b[1;32m--> 129\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39mself\u001b[39;49m, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\core\\strings\\accessor.py:1260\u001b[0m, in \u001b[0;36mStringMethods.contains\u001b[1;34m(self, pat, case, flags, na, regex)\u001b[0m\n\u001b[0;32m   1252\u001b[0m \u001b[39mif\u001b[39;00m regex \u001b[39mand\u001b[39;00m re\u001b[39m.\u001b[39mcompile(pat)\u001b[39m.\u001b[39mgroups:\n\u001b[0;32m   1253\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m   1254\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mThis pattern is interpreted as a regular expression, and has \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1255\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mmatch groups. To actually get the groups, use str.extract.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1256\u001b[0m         \u001b[39mUserWarning\u001b[39;00m,\n\u001b[0;32m   1257\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[0;32m   1258\u001b[0m     )\n\u001b[1;32m-> 1260\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_data\u001b[39m.\u001b[39;49marray\u001b[39m.\u001b[39;49m_str_contains(pat, case, flags, na, regex)\n\u001b[0;32m   1261\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_wrap_result(result, fill_value\u001b[39m=\u001b[39mna, returns_string\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\core\\strings\\object_array.py:131\u001b[0m, in \u001b[0;36mObjectStringArrayMixin._str_contains\u001b[1;34m(self, pat, case, flags, na, regex)\u001b[0m\n\u001b[0;32m    129\u001b[0m         upper_pat \u001b[39m=\u001b[39m pat\u001b[39m.\u001b[39mupper()\n\u001b[0;32m    130\u001b[0m         f \u001b[39m=\u001b[39m \u001b[39mlambda\u001b[39;00m x: upper_pat \u001b[39min\u001b[39;00m x\u001b[39m.\u001b[39mupper()\n\u001b[1;32m--> 131\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_str_map(f, na, dtype\u001b[39m=\u001b[39;49mnp\u001b[39m.\u001b[39;49mdtype(\u001b[39m\"\u001b[39;49m\u001b[39mbool\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\core\\strings\\object_array.py:71\u001b[0m, in \u001b[0;36mObjectStringArrayMixin._str_map\u001b[1;34m(self, f, na_value, dtype, convert)\u001b[0m\n\u001b[0;32m     69\u001b[0m map_convert \u001b[39m=\u001b[39m convert \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39mall(mask)\n\u001b[0;32m     70\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 71\u001b[0m     result \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39;49mmap_infer_mask(arr, f, mask\u001b[39m.\u001b[39;49mview(np\u001b[39m.\u001b[39;49muint8), map_convert)\n\u001b[0;32m     72\u001b[0m \u001b[39mexcept\u001b[39;00m (\u001b[39mTypeError\u001b[39;00m, \u001b[39mAttributeError\u001b[39;00m) \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m     73\u001b[0m     \u001b[39m# Reraise the exception if callable `f` got wrong number of args.\u001b[39;00m\n\u001b[0;32m     74\u001b[0m     \u001b[39m# The user may want to be warned by this, instead of getting NaN\u001b[39;00m\n\u001b[0;32m     75\u001b[0m     p_err \u001b[39m=\u001b[39m (\n\u001b[0;32m     76\u001b[0m         \u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m((takes)|(missing)) (?(2)from \u001b[39m\u001b[39m\\\u001b[39m\u001b[39md+ to )?\u001b[39m\u001b[39m\\\u001b[39m\u001b[39md+ \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     77\u001b[0m         \u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(?(3)required )positional arguments?\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     78\u001b[0m     )\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\_libs\\lib.pyx:2870\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer_mask\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\pandas\\core\\strings\\object_array.py:124\u001b[0m, in \u001b[0;36mObjectStringArrayMixin._str_contains.<locals>.<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m    120\u001b[0m         flags \u001b[39m|\u001b[39m\u001b[39m=\u001b[39m re\u001b[39m.\u001b[39mIGNORECASE\n\u001b[0;32m    122\u001b[0m     pat \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39mcompile(pat, flags\u001b[39m=\u001b[39mflags)\n\u001b[1;32m--> 124\u001b[0m     f \u001b[39m=\u001b[39m \u001b[39mlambda\u001b[39;00m x: pat\u001b[39m.\u001b[39;49msearch(x) \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    125\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    126\u001b[0m     \u001b[39mif\u001b[39;00m case:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Cell \u001b[1;32mIn[309], line 15\u001b[0m, in \u001b[0;36mcompute_score_paragraph\u001b[1;34m(paragraph, synsets_context, total_weight, nasari_vectors)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m[\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(paragraph)\u001b[39m}\u001b[39;00m\u001b[39m] \u001b[39m\u001b[39m{\u001b[39;00msyn_word\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     14\u001b[0m \u001b[39mfor\u001b[39;00m (syn_topic,weight) \u001b[39min\u001b[39;00m synsets_context:\n\u001b[1;32m---> 15\u001b[0m     score_word \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (weighted_overlap2(syn_word, syn_topic)\u001b[39m*\u001b[39mweight)\n\u001b[0;32m     16\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m[\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(paragraph)\u001b[39m}\u001b[39;00m\u001b[39m] \u001b[39m\u001b[39m{\u001b[39;00msyn_word\u001b[39m}\u001b[39;00m\u001b[39m -> \u001b[39m\u001b[39m{\u001b[39;00msyn_topic\u001b[39m}\u001b[39;00m\u001b[39m -> \u001b[39m\u001b[39m{\u001b[39;00mweighted_overlap2(syn_word, syn_topic)\u001b[39m*\u001b[39mweight\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     17\u001b[0m score_word \u001b[39m/\u001b[39m\u001b[39m=\u001b[39m total_weight \u001b[39m#media ponderata\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[310], line 5\u001b[0m, in \u001b[0;36mweighted_overlap2\u001b[1;34m(vect1, vect2)\u001b[0m\n\u001b[0;32m      3\u001b[0m tot \u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m\n\u001b[0;32m      4\u001b[0m overlap \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m----> 5\u001b[0m \u001b[39mfor\u001b[39;00m i, elem \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39;49m(vect1):\n\u001b[0;32m      6\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m      7\u001b[0m         index \u001b[39m=\u001b[39m vect2\u001b[39m.\u001b[39mindex(elem) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
      ]
     }
    ],
