[FIX] compute_score_paragraph()

--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -484,39 +484,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def compute_score_paragraph(paragraph, synsets_context, total_weight, nasari_vectors):\n",
+    "def compute_score_paragraph(paragraph, weighted_topic, total_weight, nasari_vectors):\n",
     "    synsets_sentence = []\n",
-    "    score_sentence = 0\n",
-    "\n",
+    "    score_paragraph = 0\n",
     "    i = 0\n",
     "    for word in paragraph:\n",
-    "        best_sense = simplified_lesk_for_paragraphs_word(word, set([tupla[0] for tupla in synsets_context]), nasari_vectors)\n",
+    "        best_sense = simplified_lesk_for_paragraphs_word(word, set([tupla[0] for tupla in weighted_topic]), nasari_vectors)\n",
     "        if best_sense is not None:\n",
     "            synsets_sentence.append(best_sense)\n",
-    "        print(f'[{i}/{len(paragraph)}] {word} -> {synsets_sentence[i]}')\n",
+    "        #print(f'[{i}/{len(paragraph)}] {word} -> {synsets_sentence[i]}')\n",
     "        i += 1\n",
     "\n",
     "    for syn_word in synsets_sentence:\n",
     "        score_word = 0\n",
-    "        print(f'[{i}/{len(paragraph)}] {syn_word}')\n",
-    "        for (syn_topic,weight) in synsets_context:\n",
+    "        #print(f'[{i}/{len(paragraph)}] {syn_word}')\n",
+    "        for (syn_topic,weight) in weighted_topic:\n",
     "            score_word += (weighted_overlap2(syn_word, syn_topic)*weight)\n",
-    "            print(f'[{i}/{len(paragraph)}] {syn_word} -> {syn_topic} -> {weighted_overlap2(syn_word, syn_topic)*weight}')\n",
+    "            #print(f'[{i}/{len(paragraph)}] {syn_word} -> {syn_topic} -> {weighted_overlap2(syn_word, syn_topic)*weight}')\n",
     "        score_word /= total_weight #media ponderata\n",
-    "        score_sentence += score_word\n",
-    "    score_sentence /= len(paragraph)\n",
-    "    return score_sentence"
+    "        score_paragraph += score_word\n",
+    "    score_paragraph /= len(synsets_sentence)\n",
+    "    return score_paragraph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,54 +529,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''def disambiguate_word_context(weighted_context):\n",
-    "    synsets_topic = []\n",
-    "    total_weight = 0\n",
-    "    for (word_topic, weight) in weighted_context:\n",
-    "        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\n",
-    "        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\n",
-    "        if synset_word_context is not None:\n",
-    "            synsets_topic.append((synset_word_context, weight))\n",
-    "            total_weight += weight\n",
-    "    return synsets_topic, total_weight'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "'''def disambiguate_word_context(weighted_context):\n",
-    "    synsets_topic = []\n",
-    "    total_weight = 0\n",
-    "    for (word_topic, weight) in weighted_context:\n",
-    "        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\n",
-    "        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\n",
-    "        if synset_word_context is not None:\n",
-    "            synsets_topic.append((synset_word_context, weight))\n",
-    "            total_weight += weight\n",
-    "    return synsets_topic, total_weight'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "\"def weighted_overlap(sentence, weighted_context):\\n    numeratore = 0\\n    for word in sentence:\\n        #check if word is in first column of key_words\\n        if word in [x[0] for x in weighted_context]:\\n            #print(f'{word} in key_words')\\n            #get index of word in key_words\\n            index = [x[1] for x in weighted_context if x[0] == word][0]\\n            #print(f'index: {index}')\\n\\n            numeratore += 1/(index)\\n            #print('\\n')\\n       # else:\\n            #print(f'{word} not in key_words')\\n            #print('\\n')\\n\\n    i = 1\\n    denominatore = 0\\n    for word in weighted_context:\\n        denominatore += 1/(2*i)\\n        i += 1\\n\\n    return numeratore/denominatore\""
-      ]
+      "text/plain": "\"def disambiguate_word_context(weighted_context):\\n    synsets_topic = []\\n    total_weight = 0\\n    for (word_topic, weight) in weighted_context:\\n        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\\n        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\\n        if synset_word_context is not None:\\n            synsets_topic.append((synset_word_context, weight))\\n            total_weight += weight\\n    return synsets_topic, total_weight\""
      },
-     "execution_count": 279,
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''def disambiguate_word_context(weighted_context):\n",
+    "    synsets_topic = []\n",
+    "    total_weight = 0\n",
+    "    for (word_topic, weight) in weighted_context:\n",
+    "        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\n",
+    "        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\n",
+    "        if synset_word_context is not None:\n",
+    "            synsets_topic.append((synset_word_context, weight))\n",
+    "            total_weight += weight\n",
+    "    return synsets_topic, total_weight'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\"def disambiguate_word_context(weighted_context):\\n    synsets_topic = []\\n    total_weight = 0\\n    for (word_topic, weight) in weighted_context:\\n        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\\n        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\\n        if synset_word_context is not None:\\n            synsets_topic.append((synset_word_context, weight))\\n            total_weight += weight\\n    return synsets_topic, total_weight\""
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''def disambiguate_word_context(weighted_context):\n",
+    "    synsets_topic = []\n",
+    "    total_weight = 0\n",
+    "    for (word_topic, weight) in weighted_context:\n",
+    "        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\n",
+    "        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\n",
+    "        if synset_word_context is not None:\n",
+    "            synsets_topic.append((synset_word_context, weight))\n",
+    "            total_weight += weight\n",
+    "    return synsets_topic, total_weight'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "\"def weighted_overlap(sentence, weighted_context):\\n    numeratore = 0\\n    for word in sentence:\\n        #check if word is in first column of key_words\\n        if word in [x[0] for x in weighted_context]:\\n            #print(f'{word} in key_words')\\n            #get index of word in key_words\\n            index = [x[1] for x in weighted_context if x[0] == word][0]\\n            #print(f'index: {index}')\\n\\n            numeratore += 1/(index)\\n            #print('\\n')\\n       # else:\\n            #print(f'{word} not in key_words')\\n            #print('\\n')\\n\\n    i = 1\\n    denominatore = 0\\n    for word in weighted_context:\\n        denominatore += 1/(2*i)\\n        i += 1\\n\\n    return numeratore/denominatore\""
+     },
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,55 +725,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0/27] anticipated -> None\n",
-      "[1/27] celebrity -> None\n",
-      "[2/27] culture -> bn:00211860n\n",
-      "[3/27] social -> bn:01316426n\n",
-      "[4/27] medium -> None\n",
-      "[5/27] thought -> bn:00077029n\n",
-      "[6/27] artist -> bn:01017615n\n",
-      "[7/27] more than -> None\n",
-      "[8/27] hold -> bn:00738264n\n",
-      "[9/27] paintbrush -> None\n",
-      "[10/27] wound up -> None\n",
-      "[11/27] john lennon -> None\n",
-      "[12/27] new -> bn:00775066n\n",
-      "[13/27] tate -> bn:00691280n\n",
-      "[14/27] exhibition -> bn:00005938n\n",
-      "[15/27] open -> bn:02590911n\n",
-      "[16/27] alastair -> None\n",
-      "[17/27] smart -> None\n",
-      "[18/27] show -> bn:00903557n\n",
-      "[19/27] far -> bn:02004026n\n",
-      "[20/27] important -> None\n",
-      "[21/27] artist -> bn:01017615n\n",
-      "[22/27] modern -> bn:00412461n\n",
-      "[23/27] age -> bn:00020593n\n",
-      "[24/27] wa -> bn:01938240n\n",
-      "[25/27] ahead -> None\n",
-      "[26/27] time -> bn:00506951n\n",
-      "[27/27] None\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[311], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m summary \u001b[39m=\u001b[39m make_summarization(text, text_preprocessed, weighted_topic_vectors, total_weight, nasari_vectors)\n",
-      "Cell \u001b[1;32mIn[305], line 12\u001b[0m, in \u001b[0;36mmake_summarization\u001b[1;34m(text, text_preprocessed, synsets_context, total_weight, nasari_vectors, perc)\u001b[0m\n\u001b[0;32m      8\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m paragraph \u001b[39min\u001b[39;00m text_preprocessed:\n\u001b[0;32m     11\u001b[0m     \u001b[39m# attribuisce un peso ad ogni frase\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m     weight_sentences\u001b[39m.\u001b[39mappend((i, text[i], compute_score_paragraph(paragraph, synsets_context, total_weight, nasari_vectors)))\n\u001b[0;32m     13\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mpeso frase \u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mweight_sentences[i][\u001b[39m2\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     14\u001b[0m     i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "Cell \u001b[1;32mIn[309], line 15\u001b[0m, in \u001b[0;36mcompute_score_paragraph\u001b[1;34m(paragraph, synsets_context, total_weight, nasari_vectors)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m[\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(paragraph)\u001b[39m}\u001b[39;00m\u001b[39m] \u001b[39m\u001b[39m{\u001b[39;00msyn_word\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     14\u001b[0m \u001b[39mfor\u001b[39;00m (syn_topic,weight) \u001b[39min\u001b[39;00m synsets_context:\n\u001b[1;32m---> 15\u001b[0m     score_word \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (weighted_overlap2(syn_word, syn_topic)\u001b[39m*\u001b[39mweight)\n\u001b[0;32m     16\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m[\u001b[39m\u001b[39m{\u001b[39;00mi\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(paragraph)\u001b[39m}\u001b[39;00m\u001b[39m] \u001b[39m\u001b[39m{\u001b[39;00msyn_word\u001b[39m}\u001b[39;00m\u001b[39m -> \u001b[39m\u001b[39m{\u001b[39;00msyn_topic\u001b[39m}\u001b[39;00m\u001b[39m -> \u001b[39m\u001b[39m{\u001b[39;00mweighted_overlap2(syn_word, syn_topic)\u001b[39m*\u001b[39mweight\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m     17\u001b[0m score_word \u001b[39m/\u001b[39m\u001b[39m=\u001b[39m total_weight \u001b[39m#media ponderata\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[310], line 5\u001b[0m, in \u001b[0;36mweighted_overlap2\u001b[1;34m(vect1, vect2)\u001b[0m\n\u001b[0;32m      3\u001b[0m tot \u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m\n\u001b[0;32m      4\u001b[0m overlap \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m----> 5\u001b[0m \u001b[39mfor\u001b[39;00m i, elem \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39;49m(vect1):\n\u001b[0;32m      6\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m      7\u001b[0m         index \u001b[39m=\u001b[39m vect2\u001b[39m.\u001b[39mindex(elem) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+      "peso frase 0: 0.3159337196388161\n",
+      "peso frase 1: 0.2381659527623258\n",
+      "peso frase 2: 0.19465909594398204\n",
+      "peso frase 3: 0.2035473338165611\n",
+      "peso frase 4: 0.1928765340928231\n",
+      "peso frase 5: 0.3230059199680386\n",
+      "peso frase 6: 0.1425373048861105\n",
+      "peso frase 7: 0.16014518339330142\n",
+      "peso frase 8: 0.19928189826976236\n",
+      "peso frase 9: 0.25549596236165895\n",
+      "peso frase 10: 0.18881866315180698\n",
+      "peso frase 11: 0.16668611956573973\n",
+      "peso frase 12: 0.23970973455875233\n",
+      "peso frase 13: 0.22384288620772183\n",
+      "peso frase 14: 0.20821751690604653\n",
+      "peso frase 15: 0.2243162275822586\n",
+      "peso frase 16: 0.15012066198538454\n",
+      "peso frase 17: 0.20564268098807262\n",
+      "peso frase 18: 0.18012321652394706\n",
+      "peso frase 19: 0.19205710057614356\n"
      ]
     }
    ],
